# fedmaq-experiments

./: .env.copy  .gitattributes  .gitignore  .markdownlintignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
.agents/project/: metadata.md  reproduction_registry.md
.agents/rules/: flower_rules.mdc  preferences.mdc
.agents/workflows/: add-baseline.md  align-manuscript.md  run-benchmark.md
.cursor/project/: baseline_registry.md  changelog.md  experiment_registry.md
.cursor/rules/: ablation-phases.mdc  agent-workflows.mdc  baselines.mdc  datasets-simulation.mdc  evaluation-metrics.mdc  flower-patterns.mdc  hydra-config.mdc  hyperparameters.mdc  project-overview.mdc  repo-preferences.mdc  tech-stack.mdc
.cursor/skills/agent-handoff/: SKILL.md
.cursor/skills/run-phase-experiment/: SKILL.md
.cursor/skills/scaffold-baseline/: SKILL.md
conf/: config.yaml
conf/algorithm/: cfd.yaml  fedavg.yaml  fedavg_kd.yaml  feddistill.yaml  fedkd.yaml  fedmaq.yaml  fedmaq_data_only.yaml  fedmaq_no_kd.yaml  fedmaq_resource_only.yaml  fedmaq_state_only.yaml  fedpaq.yaml
conf/experiment/: ci.yaml  default.yaml  femnist.yaml  preliminary.yaml
conf/heterogeneity/: dirichlet_alpha_0.1.yaml  femnist.yaml  uniform_memory.yaml
reproductions/fedavg_mnist/: main.py  pyproject.toml
reproductions/fedavg_mnist/tests/: data_test.py  model_test.py
reproductions/fedprox/: pyproject.toml
scripts/: run.py
src/fedmaq/: cli.py
src/fedmaq/baselines/: quantization.py
src/fedmaq/core/: client.py  evaluation.py  models.py  partitioning.py  (+2 more)
tests/: test_environment.py
