[project]
name = "fedmaq"
version = "0.1.0"
description = "FedMAQ: communication-efficient federated learning experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr>=1.12.0",
    "hydra-core>=1.3.0",
    "matplotlib>=3.8.0",
    "omegaconf>=2.3.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[project.scripts]
fedmaq = "fedmaq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedmaq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
