[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedavg-mnist"
version = "1.0.0"
description = "Self-contained FedAvg MNIST reproduction"
dependencies = [
    "flwr[simulation]>=1.3.0",
    "torch>=2.0.0",
    "torchvision",
    "hydra-core>=1.2.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "scikit-image",
    "scikit-learn",
    "wget",
    "pandas",
    "pyhamcrest",
    "pillow",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
